--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-hot-loader": "^1.3.0",
+    "reqwest": "^2.0.5",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
