--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "compile": "webpack -p --progress --colors --config webpack.production.config.js",
     "dev": "webpack-dev-server --devtool eval --port 8090 --progress --colors --hot --content-base build"
   },
   "author": "",
